# GNN-SSL-Project-for-Deep-Learning

./: .gitignore  README.md  data.py  inductive.py  pca.ipynb  pyproject.toml  script.ipynb  script.py  self_supervised.py  ssl1.py  supervised.py  unsupervised_features.py  unsupervised_single_batch.py
src/: data.py  main.py  main_1.py  model.py  model_1.py
