[project]
name = "project-dl-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch-geometric==2.6.1",
    "pyyaml==6.0.2",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "pandas>=2.3.0",
    "ogb>=1.3.6",
]